[package]
name = "bmi270"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] } # Some traits are not yet available at 1.0.0
embedded-hal-async = "1.0.0"
fixedvec = "0.2.4"
